# imagebm

./: CMakeLists.txt  README.md  bmpfile.c  bmpfile.h  imgproc.c  imgproc.h  main.c
